# ROS2

./: .dockerignore  .gitignore  DANCE_DEMO_TASK.md  DOCKER_GUIDE.md.backup  DOCKER_GUIDE_DE.md  Dockerfile  IGUS_REBEL_GUIDE.md  IGUS_REBEL_GUIDE.md.backup  INSTRUCTIONS_DE.md  INSTRUCTIONS_FOXGLOVE_DE.md  INSTRUCTIONS_FOXGLOVE_RU.md  INSTRUCTIONS_RU.md  Makefile  README.md  ROSBRIDGE_FIX.md  SAFETY_DEMO_TASK.md  SETUP_COMPLETE.md  cyclonedds.xml  docker-compose.yml  ros2-docker.ps1  setup_igus.sh  start.sh  start_dance_demo.bat  start_safety_demo.bat  start_sim.bat  start_sim_with_bridge.sh  start_simple_demo.bat  start_web_sim.sh
src/: README.md
src/rebel_dance_demo/: README.md  package.xml  setup.cfg  setup.py
src/rebel_dance_demo/launch/: dance_demo_real.launch.py  dance_demo_sim.launch.py
src/rebel_dance_demo/rebel_dance_demo/: __init__.py  rebel_dancer.py
src/rebel_demo/: package.xml  setup.cfg  setup.py
src/rebel_demo/launch/: simple_moveit_demo.launch.py
src/rebel_demo/rebel_demo/: simple_moveit_demo.py
src/rebel_safety_demo/: README.md  README.md.backup  package.xml  setup.cfg  setup.py
src/rebel_safety_demo/launch/: safety_demo_real.launch.py  safety_demo_sim.launch.py
src/rebel_safety_demo/rebel_safety_demo/: __init__.py  human_distance_publisher.py  llm_safety_supervisor.py  rebel_mover.py
